# LCM_Service

./: .gitignore  CMakeLists.txt
doc/: WhatToDo.txt
include/: calculator.hpp  shared.hpp
src/: CMakeLists.txt  calculator.cpp  client_grpc.cpp  client_libevent.cpp  server.cpp  server_grpc.cpp  server_libevent.cpp
src/client_http/: CMakeLists.txt
src/client_rpc/: CMakeLists.txt
src/lcm_calc/: CMakeLists.txt
src/protos/: lcm_calculator.proto
src/server_http/: CMakeLists.txt
src/server_rpc/: CMakeLists.txt
tests/: CMakeLists.txt  test_calculator.cpp  test_empty.cpp  test_ginac.cpp
